--- a/my-app/src/pages/Main/CreatorMain.module.css
+++ b/my-app/src/pages/Main/CreatorMain.module.css
@@ -61,8 +61,7 @@
     justify-content: center;
     align-items: center;
     position: absolute;
-    background-color: #202020;
-    color: #FFFFFF;
+    background-color: #ffffff;
     top: 50px;
     z-index: 9;
     padding: 10px 20px;
