--- a/my-app/src/pages/LoginPages/LoginForms/RegisterForm.scss
+++ b/my-app/src/pages/LoginPages/LoginForms/RegisterForm.scss
@@ -56,6 +56,9 @@
 .Back-button {
     width: 5vw;
     padding: 0.25vw;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .Register-input {
