--- a/my-app/src/pages/LoginPages/LoginPage.scss
+++ b/my-app/src/pages/LoginPages/LoginPage.scss
@@ -4,7 +4,6 @@
     justify-content: center;
     align-items: center;
     height: 100vh;
-    width: 100vw;
     background-image: url('../../bg_img/william-daigneault-Cd84YdL9px8-unsplash.jpg');
     background-size: cover;
     background-position: center;
@@ -135,6 +134,9 @@
     height: 100%;
     height: 8vh;
     border: 1px grey solid;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .pw-container {
